--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "react-spinkit": "^3.0.0",
     "styled-components": "^5.3.3",
     "typescript": "^4.5.4"
   },
@@ -48,6 +49,7 @@
     "styled-components": "^5"
   },
   "devDependencies": {
+    "@types/react-spinkit": "^3.0.7",
     "sass": "^1.45.1"
   }
 }
