--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,8 @@
     // "isolatedModules": true,
     "noEmit": true,
     "jsx": "react",
-    "baseUrl": "."
+    "baseUrl": ".",
+    "noImplicitAny": false
   },
   "include": ["src"]
 }
